syntax = "proto3";

package pb;

// import "user.proto";
import "google/protobuf/timestamp.proto";
option go_package = "github.com/ofagbola/Editor-RPM-Backend/authentication/pb";

message RenewAccessRequest {
    string refresh_token = 1; 
}

message RenewAccessResponse {
    string access_token = 1;
    google.protobuf.Timestamp access_token_expires_at = 2;
}